test/tests/stages/18_structures/invalid_parse/extra_credit/union_member_name_kw.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  union
  identifier(u)
  {
  int
  struct
  ;
  }
  ;
